--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ gems:
 social:
   - icon: medium
     title: blog
-    url: sharathsclass12.blogspot.sg
+    url: https://sharathsclass12.blogspot.sg
   - icon: envelope-o
     title: email
     url: mailto:sharathc001@e.ntu.edu.sg
